@@ -1,12 +1,16 @@
 package com.gosha.kalosha.hauzijan.service.default_impl;
 
+import com.gosha.kalosha.hauzijan.dto.WordDto;
+import com.gosha.kalosha.hauzijan.model.Word;
 import com.gosha.kalosha.hauzijan.repository.SentenceRepository;
 import com.gosha.kalosha.hauzijan.service.QueryService;
 import com.gosha.kalosha.hauzijan.dto.SentenceDto;
-import com.gosha.kalosha.hauzijan.dto.WordDto;
 import com.gosha.kalosha.hauzijan.exception_handing.NoSentencesFoundException;
 import com.gosha.kalosha.hauzijan.model.Sentence;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -15,12 +19,14 @@ import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import static com.gosha.kalosha.hauzijan.model.ParameterType.*;
+
 @Service
 public class DefaultQueryService implements QueryService
 {
     private final SentenceRepository sentenceRepository;
 
-    private static final Map<Set<String>, Function<Object[], List<Sentence>>> COMPLEX_QUERY_METHODS = new HashMap<>();
+    private static final Map<Set<String>, Function<Map<String, Object>, List<Sentence>>> COMPLEX_QUERY_METHODS = new HashMap<>();
 
     @Autowired
     public DefaultQueryService(SentenceRepository sentenceRepository)
@@ -32,39 +38,61 @@ public class DefaultQueryService implements QueryService
     @Transactional
     public List<SentenceDto> getByParameters(Map<String, Object> query, Integer page, Integer maxResults)
     {
-        var queryFunction = COMPLEX_QUERY_METHODS.get(query.keySet());
-        if (queryFunction == null)
+        var queryMethod = COMPLEX_QUERY_METHODS.get(query.keySet());
+        if (queryMethod == null)
         {
-            throw new IllegalStateException("Wrong query parameters");
+            throw new IllegalArgumentException("Wrong query parameters");
         }
-        if (query.containsKey("gram"))
+        var pageProperties = PageRequest.of(
+                page == null ? 0 : page, maxResults == null ? 10 : maxResults, Sort.by("id")
+        );
+        query.put(PAGE, pageProperties);
+        if (query.containsKey(GRAM))
         {
+            if (!(query.get(GRAM) instanceof Map))
+            {
+                throw new IllegalArgumentException("Grammar should be presented as a key-value structure");
+            }
             String grammar = "%"
-                    + ((Map<String, String>) query.get("gram")).entrySet()
+                    + ((Map<String, String>) query.get(GRAM)).entrySet()
                     .stream()
                     .map(e -> e.getKey() + "=" + e.getValue())
                     .collect(Collectors.joining("%"))
                     + "%";
-            query.put("gram", grammar);
+            query.put(GRAM, grammar);
         }
-        List<Sentence> sentences = queryFunction.apply(query.values().toArray());
+        List<Sentence> sentences = queryMethod.apply(query);
         if (sentences.isEmpty())
         {
             throw new NoSentencesFoundException("No sentences found");
         }
-        return sentences.stream().map(SentenceDto::fromSentence).collect(Collectors.toList());
+        return sentences.stream().map(Sentence::toDto).toList();
     }
 
     @Override
     @Transactional
     public List<SentenceDto> getBySimpleQuery(String queryString, Integer page, Integer maxResults)
     {
-        List<Sentence> sentences = sentenceRepository.findAllByOriginalSentenceContaining(queryString);
+        List<Sentence> sentences = sentenceRepository.findAllByOriginalSentenceContaining(
+                queryString, PageRequest.of(
+                        page == null ? 0 : page,
+                        maxResults == null ? 10 : maxResults,
+                        Sort.by("id")
+                )
+        );
         if (sentences.isEmpty())
         {
             throw new NoSentencesFoundException("No sentences found");
         }
-        return sentences.stream().map(SentenceDto::fromSentence).collect(Collectors.toList());
+        return sentences.stream().map(Sentence::toDto).toList();
+    }
+
+    @Override
+    @Transactional
+    public List<SentenceDto> getBySimpleQuery(String[] queryStrings, Integer page, Integer maxResults)
+    {
+        String queryString = String.join("%", queryStrings);
+        return getBySimpleQuery(queryString, page, maxResults);
     }
 
     @Override
@@ -76,21 +104,27 @@ public class DefaultQueryService implements QueryService
         {
             throw new NoSentencesFoundException("Sentence with id " + id + " does not exist");
         }
-        return s.get().getWordList().stream().map(WordDto::fromWord).collect(Collectors.toList());
+        return s.get().getWordList().stream().map(Word::toDto).toList();
     }
 
     @PostConstruct
     private void fillComplexQueryMethodsMap()
     {
         COMPLEX_QUERY_METHODS.putAll(Map.of(
-                Set.of("lemma"), x -> sentenceRepository.findAllByLemma((String) x[0]),
-                Set.of("pos"), x -> sentenceRepository.findAllByPos((String) x[0]),
-                Set.of("gram"), x -> sentenceRepository.findAllByGram((String) x[0]),
-                Set.of("lemma", "pos"), x -> sentenceRepository.findAllByLemmaPos((String) x[0], (String) x[1]),
-                Set.of("lemma", "gram"), x -> sentenceRepository.findAllByLemmaGram((String) x[1], (String) x[0]),
-                Set.of("pos", "gram"), x -> sentenceRepository.findAllByPosGram((String) x[1], (String) x[0]),
-                Set.of("lemma", "pos", "gram"), x -> sentenceRepository.findAllByLemmaPosGram(
-                        (String) x[1], (String) x[2], (String) x[0]
+                Set.of(LEMMA), x -> sentenceRepository.findAllByLemma((String) x.get(LEMMA), (Pageable) x.get(PAGE)),
+                Set.of(POS), x -> sentenceRepository.findAllByPos((String) x.get(POS), (Pageable) x.get(PAGE)),
+                Set.of(GRAM), x -> sentenceRepository.findAllByGram((String) x.get(GRAM), (Pageable) x.get(PAGE)),
+                Set.of(LEMMA, POS), x -> sentenceRepository.findAllByLemmaPos(
+                        (String) x.get(LEMMA), (String) x.get(POS), (Pageable) x.get(PAGE)
+                ),
+                Set.of(LEMMA, GRAM), x -> sentenceRepository.findAllByLemmaGram(
+                        (String) x.get(LEMMA), (String) x.get(GRAM), (Pageable) x.get(PAGE)
+                ),
+                Set.of(POS, GRAM), x -> sentenceRepository.findAllByPosGram(
+                        (String) x.get(POS), (String) x.get(GRAM), (Pageable) x.get(PAGE)
+                ),
+                Set.of(LEMMA, POS, GRAM), x -> sentenceRepository.findAllByLemmaPosGram(
+                        (String) x.get(LEMMA), (String) x.get(POS), (String) x.get(GRAM), (Pageable) x.get(PAGE)
                 )
         ));
     }
